objects/Worksheets__c.object
<CustomObject>
    <fields>
        <fullName>Account_Detail_Link__c</fullName>
        <description>URL link to the account referenced on the MLS worksheet for email templates.</description>
        <formula>"https://webdc--dreamforce.cs54.my.salesforce.com/"&amp;Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Worksheets</relationshipLabel>
        <relationshipName>Worksheets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Account_MLS_Have_Been_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Account MLS' Have Been Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <label>Filters</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MLS__c</fullName>
        <label>MLS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Worksheets</relationshipLabel>
        <relationshipName>Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Setup_Completed__c</fullName>
        <label>Pre Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Setup_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Setup Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Areas__c</fullName>
        <label>Target Areas</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_Classes__c</fullName>
        <label>What Classes?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Classes__c</fullName>
        <label># of Classes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_MLS__c</fullName>
        <label># of MLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Bind__c</fullName>
        <label>Manual Bind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pre Setup Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Internal Response</fullName>
                </value>
                <value>
                    <fullName>Backed Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Worksheets</label>
    <nameField>
        <displayFormat>WK-{0000}</displayFormat>
        <label>Worksheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worksheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MLS_Queue_Worksheets</fullName>
        <filterScope>Queue</filterScope>
        <label>MLS Queue</label>
        <queue>MLS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TORCHx_Post_Launch_Queue_Worksheets</fullName>
        <filterScope>Queue</filterScope>
        <label>TORCHx Post Launch Queue</label>
        <queue>TORCHx_Post_Launch_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>MLS_Worksheet</fullName>
        <active>true</active>
        <label>MLS Worksheet</label>
    </recordTypes>
    <validationRules>
        <fullName>Status_Complete_without_AcctMLS_Checkbox</fullName>
        <active>true</active>
        <description>The Status Cannot be marked Complete without the All Account MLS' Have Been Activated checkbox checked.</description>
        <errorConditionFormula>All_Account_MLS_Have_Been_Activated__c &lt;&gt; TRUE &amp;&amp;
ISPICKVAL(Status__c, "Complete")</errorConditionFormula>
        <errorMessage>Please make sure to activate all of the Account MLS' needed and then check the "All Account MLS' Have Been Activated".</errorMessage>
    </validationRules>
</CustomObject>